--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,19 +10,20 @@ jobs:
       matrix:
         node-version: [8.x, 10.x, 12.x, 13.x]
 
+    name: Node.js ${{ matrix.node-version }}
+
     steps:
-    - uses: actions/checkout@v1
-      
+    - uses: actions/checkout@v2
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-      
-    - name: npm install, build, and test
-      run: |
-        npm install
-        npm ci
-        npm run build --if-present
-        npm test
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Run tests
+      run: npm test
       env:
         CI: true
