--- a/.github/workflows/publish-in-github-package-registry.yml
+++ b/.github/workflows/publish-in-github-package-registry.yml
@@ -41,4 +41,4 @@ jobs:
       - name: Publish to GitHub Package Registry
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_PUBLISH_GPR_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.GH_PUBLISH_GPR_TOKEN}}
