--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@hapi/code": "~8.0.2",
-    "@hapi/lab": "~23.0.0",
+    "@types/jest": "~26.0.10",
     "@typescript-eslint/eslint-plugin": "~3.9.1",
     "eslint": "~7.7.0",
     "eslint-config-standard": "~14.1.1",
@@ -18,6 +17,7 @@
     "eslint-plugin-node": "~11.1.0",
     "eslint-plugin-promise": "~4.2.1",
     "eslint-plugin-standard": "~4.0.1",
+    "jest": "~26.4.2",
     "typescript": "~4.0.2"
   },
   "engines": {
@@ -48,12 +48,9 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint src --ext .js,.ts",
-    "lint:fix": "eslint src --ext .js,.ts --fix",
-    "list:tests": "lab --assert @hapi/code --dry --verbose",
+    "lint:fix": "npm run lint -- --fix",
     "test": "npm run build && npm run lint && npm run test:run",
-    "test:run": "lab --assert @hapi/code --leaks --coverage --reporter console --output stdout --reporter html --output ./coverage/coverage.html",
-    "test:single": "lab --assert @hapi/code --leaks --lint --id",
-    "test:types": "tsc"
+    "test:run": "jest"
   },
   "types": "dist"
 }
