--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "node": ">=8"
   },
   "files": [
-    "dist",
-    "index.js"
+    "dist"
   ],
   "homepage": "https://github.com/supercharge/classes",
   "keywords": [
@@ -37,7 +36,7 @@
     "superchargejs"
   ],
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist",
   "publishConfig": {
     "access": "public"
   },
