--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "eslint-config-standard-with-typescript": "~21.0.1",
     "eslint-plugin-import": "~2.25.2",
     "eslint-plugin-node": "~11.1.0",
-    "eslint-plugin-promise": "~5.1.0",
+    "eslint-plugin-promise": "~5.1.1",
     "eslint-plugin-standard": "~4.1.0",
-    "jest": "~27.3.0",
+    "jest": "~27.3.1",
     "typescript": "~4.4.4"
   },
   "engines": {
@@ -30,6 +30,8 @@
   "keywords": [
     "nodejs",
     "class",
+    "utilities",
+    "functions",
     "utilities",
     "class-utilities",
     "supercharge",
