--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "bugs": {
     "url": "https://github.com/supercharge/classes/issues"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@types/jest": "~27.0.3",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
+    "c8": "~7.10.0",
     "eslint": "~7.32.0",
     "eslint-config-standard": "~16.0.3",
     "eslint-config-standard-with-typescript": "~21.0.1",
@@ -17,8 +16,9 @@
     "eslint-plugin-node": "~11.1.0",
     "eslint-plugin-promise": "~5.2.0",
     "eslint-plugin-standard": "~4.1.0",
-    "jest": "~27.4.2",
-    "typescript": "~4.4.4"
+    "expect": "~27.4.2",
+    "typescript": "~4.4.4",
+    "uvu": "~0.5.2"
   },
   "engines": {
     "node": ">=8"
@@ -51,7 +51,8 @@
     "lint": "eslint src --ext .js,.ts",
     "lint:fix": "npm run lint -- --fix",
     "test": "npm run build && npm run lint && npm run test:run",
-    "test:run": "jest"
+    "test:run": "c8 --include=dist uvu",
+    "posttest": "c8 report --reporter=html"
   },
   "types": "dist"
 }
