--- a/package.json
+++ b/package.json
@@ -7,18 +7,13 @@
     "url": "https://github.com/supercharge/classes/issues"
   },
   "devDependencies": {
+    "@supercharge/eslint-config-typescript": "~1.0.1",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
-    "c8": "~7.10.0",
+    "c8": "~7.11.2",
     "eslint": "~7.32.0",
-    "eslint-config-standard": "~16.0.3",
-    "eslint-config-standard-with-typescript": "~21.0.1",
-    "eslint-plugin-import": "~2.25.3",
-    "eslint-plugin-node": "~11.1.0",
-    "eslint-plugin-promise": "~5.2.0",
-    "eslint-plugin-standard": "~4.1.0",
-    "expect": "~27.4.2",
+    "expect": "~27.5.1",
     "typescript": "~4.4.4",
-    "uvu": "~0.5.2"
+    "uvu": "~0.5.3"
   },
   "engines": {
     "node": ">=8"
